# speclite

./: MANIFEST.in  pyproject.toml  setup.cfg
speclite/: filters.py
