

[metadata]
name                     = speclite
description              = Lightweight utilities for working with spectroscopic data
long_description         = file: README.rst
long_description_content_type = text/x-rst
author                   = Speclite Developers
author_email             = dkirkby@uci.edu
license                  = BSD
url                      = https://speclite.readthedocs.io/
version                  = 1.0.dev


[options]
packages = find:
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    speclite-benchmark = speclite.benchmark:main

[build_sphinx]
source-dir = docs
build-dir  = docs/_build
all_files  = 1

[build_docs]
source-dir = docs
build-dir  = docs/_build
all_files  = 1

[upload_docs]
upload-dir     = docs/_build/html
show-response  = 1

[tool:pytest]
testpaths = "speclite" "docs"
norecursedirs = build docs/_build
astropy_header = true
doctest_plus = enabled
text_file_format = rst
# addopts = --doctest-glob=*.rst
addopts = --doctest-rst

[coverage:run]
relative_files = True
omit =
    speclite/_astropy_init*
    speclite/conftest.py
    speclite/*setup_package*
    speclite/tests/*
    speclite/*/tests/*
    speclite/extern/*
    speclite/version*
    */speclite/_astropy_init*
    */speclite/conftest.py
    */speclite/*setup_package*
    */speclite/tests/*
    */speclite/*/tests/*
    */speclite/extern/*
    */speclite/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[pep8]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[flake8]
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
